// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionList loaded 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 24,
                "fontWeight": "800",
              },
              undefined,
            ]
          }
        >
          All Submissions
        </Text>
      </View>
      <View
        accessibilityLabel="Filter Submissions. (0) selected."
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 15,
            "left": 15,
            "right": 15,
            "top": 15,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 1,
            "opacity": 1,
            "width": "auto",
          }
        }
        testID="submission-list.filter"
      >
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            Filter
          </Text>
        </View>
      </View>
    </View>
    <list>
      <item>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
            testID="submission-1"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel="S1 Profile"
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <View
                    accessibilityLabel=""
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "backgroundColor": "#F5F5F5",
                          "borderRadius": 20,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "uri": "http://www.fillmurray.com/100/100",
                        }
                      }
                      style={
                        Object {
                          "height": 40,
                          "width": 40,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  S1
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "paddingTop": 2,
                        },
                        undefined,
                        Object {
                          "color": "#8B969E",
                        },
                      ],
                    ]
                  }
                >
                  Not Submitted
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                  ]
                }
              >
                --
              </Text>
            </View>
          </View>
        </View>
      </item>
      <item>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
            testID="submission-2"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel="S2 Profile"
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <View
                    accessibilityLabel=""
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "backgroundColor": "#F5F5F5",
                          "borderRadius": 20,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "uri": "http://www.fillmurray.com/100/100",
                        }
                      }
                      style={
                        Object {
                          "height": 40,
                          "width": 40,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  S2
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                  ]
                }
              >
                Excused
              </Text>
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/off.png",
                  }
                }
                style={
                  Object {
                    "height": 20,
                    "marginLeft": 10,
                    "tintColor": "#EE0612",
                    "width": 20,
                  }
                }
                testID="SubmissionRow.hiddenIcon"
              />
            </View>
          </View>
        </View>
      </item>
      <item>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
            testID="submission-3"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel="S3 Profile"
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <View
                    accessibilityLabel=""
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "backgroundColor": "#F5F5F5",
                          "borderRadius": 20,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "uri": "http://www.fillmurray.com/100/100",
                        }
                      }
                      style={
                        Object {
                          "height": 40,
                          "width": 40,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  S3
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "paddingTop": 2,
                        },
                        undefined,
                        Object {
                          "color": "#FC5E13",
                        },
                      ],
                    ]
                  }
                >
                  Late
                </Text>
                <Text
                  color="#008EE2"
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "borderRadius": 9,
                          "borderWidth": 1,
                          "fontSize": 11,
                          "fontWeight": "500",
                          "overflow": "hidden",
                          "paddingBottom": 0,
                          "paddingLeft": 6,
                          "paddingRight": 6,
                          "paddingTop": 3,
                          "textAlign": "center",
                        },
                        Object {
                          "borderColor": "#008EE2",
                          "color": "#008EE2",
                        },
                        Object {
                          "alignSelf": "flex-start",
                          "marginTop": 8,
                        },
                      ],
                    ]
                  }
                >
                  NEEDS GRADING
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                  ]
                }
              >
                --
              </Text>
            </View>
          </View>
        </View>
      </item>
      <item>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
            testID="submission-4"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel="S4 Profile"
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <View
                    accessibilityLabel=""
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "backgroundColor": "#F5F5F5",
                          "borderRadius": 20,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "uri": "http://www.fillmurray.com/100/100",
                        }
                      }
                      style={
                        Object {
                          "height": 40,
                          "width": 40,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  S4
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "paddingTop": 2,
                        },
                        undefined,
                        Object {
                          "color": "#00AC18",
                        },
                      ],
                    ]
                  }
                >
                  Submitted
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                  ]
                }
              >
                A-
              </Text>
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/off.png",
                  }
                }
                style={
                  Object {
                    "height": 20,
                    "marginLeft": 10,
                    "tintColor": "#EE0612",
                    "width": 20,
                  }
                }
                testID="SubmissionRow.hiddenIcon"
              />
            </View>
          </View>
        </View>
      </item>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`SubmissionList renders correctly with empty list 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 24,
                "fontWeight": "800",
              },
              undefined,
            ]
          }
        >
          All Submissions
        </Text>
      </View>
      <View
        accessibilityLabel="Filter Submissions. (0) selected."
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 15,
            "left": 15,
            "right": 15,
            "top": 15,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 1,
            "opacity": 1,
            "width": "auto",
          }
        }
        testID="submission-list.filter"
      >
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            Filter
          </Text>
        </View>
      </View>
    </View>
    <list>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "height": 100,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          No results
        </Text>
      </View>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`SubmissionList shows loading indicator 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`renders a group row properly 1`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <View
          accessibilityLabel="John Doe Profile"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            accessibilityLabel=""
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F5F5F5",
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "http://www.fillmurray.com/100/100",
                }
              }
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          John Doe
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#00AC18",
                },
              ],
            ]
          }
        >
          Submitted
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
          ]
        }
      >
        A-
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/off.png",
          }
        }
        style={
          Object {
            "height": 20,
            "marginLeft": 10,
            "tintColor": "#EE0612",
            "width": 20,
          }
        }
        testID="SubmissionRow.hiddenIcon"
      />
    </View>
  </View>
</View>
`;

exports[`renders the row properly 1`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <View
          accessibilityLabel="S1 Profile"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            accessibilityLabel=""
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F5F5F5",
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "http://www.fillmurray.com/100/100",
                }
              }
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          S1
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#8B969E",
                },
              ],
            ]
          }
        >
          Not Submitted
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
          ]
        }
      >
        --
      </Text>
    </View>
  </View>
</View>
`;
